<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".SelectPlayer">


    <Button
        android:id="@+id/player2"
        android:layout_width="115dp"
        android:layout_height="49dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/_2_players"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/player3"
        android:layout_width="115dp"
        android:layout_height="49dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:gravity="center"
        android:text="@string/_3_players"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/player4"
        android:layout_width="115dp"
        android:layout_height="49dp"
        android:layout_marginStart="308dp"
        android:layout_marginLeft="308dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="308dp"
        android:layout_marginRight="308dp"
        android:layout_marginBottom="181dp"
        android:gravity="center"
        android:text="@string/_4_players"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/player5"
        android:layout_width="115dp"
        android:layout_height="49dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/_5_players"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/player6"
        android:layout_width="115dp"
        android:layout_height="49dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/_6_players"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>