<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".NameActivity">

    <EditText
        android:id="@+id/playerText"
        android:layout_width="300dp"
        android:layout_height="42dp"
        android:layout_marginStart="259dp"

        android:layout_marginTop="237dp"
        android:layout_marginEnd="259dp"

        android:layout_marginBottom="46dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/need_at_lest_2_players_for_start"
        android:inputType="textPersonName"
        android:maxLength="7"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/add_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_player"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="340dp"

        android:layout_marginTop="14dp"
        android:layout_marginEnd="340dp"

        android:layout_marginBottom="65dp"
        android:text="@string/add"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerText" />

    <Button
        android:id="@+id/start"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/go"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>